--- a/src/App.scss
+++ b/src/App.scss
@@ -1,1 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+// font-family: 'Titillium Web', sans-serif;
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+// font-family: 'Playfair Display', serif;
+
+// Primær: #D39D5B
+// Sekundær: #AD7A51
+// Tertiær: #30454C
+
+*{
+    padding: 0;
+    margin: 0 auto;
+    text-decoration: none;
+}
+body{
+    padding-left: 15%;
+    padding-right: 15%;
+    padding-top: 2%;
+    main{
+        padding-top: 10%;
+    }
+}
+@mixin coloredThinBorder {
+    border: 0.5px solid #D39D5B;  
+}
+@mixin coloredBigBorder {
+    border: 0.5px solid #D39D5B;  
+}
 
