--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,7 @@ body{
 
         }
         h6{
-            font-weight: 900;
+            font-weight: 700;
             font-size: 1vw;
             font-size: 1.2vw;
         }
@@ -60,6 +60,7 @@ body{
     padding: 4%;
     font-size: 1vw;
     font-weight: 700;
+    cursor: pointer;
 }
 @mixin dackBlueBtn {
     background-color: #30454C;
@@ -68,5 +69,6 @@ body{
     padding: 4%;
     font-size: 1vw;
     font-weight: 700;
+    cursor: pointer;
 }
 
