--- a/src/Components/Partials/Header.scss
+++ b/src/Components/Partials/Header.scss
@@ -1,6 +1,7 @@
 header{
     height: 10vh;
     padding-top: 2%;
+
     .searchWrapper{
         margin-left: 80%;
         margin-bottom: -3%;
@@ -51,9 +52,7 @@ header{
                 a{
                     font-size: 1.3vw;
                     color: #707070;
-                    &.active {
-                        color: #D39D5B;
-                    }
+
                     &:hover{
                         color: #D39D5B;
                     }
@@ -62,3 +61,6 @@ header{
         }
     }
 }
+// a.active{
+//     color: #D39D5B;
+// }
