event detaljer uden kommentar færdig

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,7 @@ body{
     main{
         padding-top: 7%;
         color: #707070;
+        white-space: pre-wrap;
         h1{
             
         }
