--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,10 @@ body{
         color: #707070;
         white-space: pre-wrap;
         h1{
-            
+            color: #D39D5B;
+            font-family: 'Playfair Display', serif;
+            font-size: 3vw;
+            font-weight: 100;
         }
         h2{
             font-family: 'Playfair Display', serif;
