--- a/src/Components/ThreeRandom/ThreeRandom.scss
+++ b/src/Components/ThreeRandom/ThreeRandom.scss
@@ -5,7 +5,7 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2%;
-
+    
     .eventsWrapper {
         figure {
             img {
@@ -13,16 +13,22 @@
                 width: 90%;
                 height: 40vh
             }
-
+            
             figcaption {
                 @include coloredThinBorder;
+                max-height: 35vh;
+                min-height: 35vh;
                 padding: 1rem 2rem 0 3rem;
                 margin-top: -2%;
                 text-align: end;
                 line-height: 1.5;
-
+                h2{
+                    min-height: 15vh;
+                    max-height: 15vh;
+                    font-size: 2.7vw;
+                }
                 h3 {
-                    padding-bottom: 3%
+                    padding-bottom: 3%;
                 }
 
                 h6 {
