mine anmeldelser med slet

--- a/src/App.scss
+++ b/src/App.scss
@@ -61,7 +61,7 @@ body{
  padding-bottom: 6%;   
 }
 @mixin orangeBtn {
-    background-color: #D39D5B;
+    background-color: #AD7A51;
     color: #FFFFFF;
     border: none;
     padding: 4%;
