--- a/src/Components/Sites/Login/Login.module.scss
+++ b/src/Components/Sites/Login/Login.module.scss
@@ -1,10 +1,10 @@
 @import '../../../App.scss';
 .loginWrapper{
     margin-top: 2%;
+    @include coloredThinBorder;
+    padding: 3%;
+    margin-bottom: 2%;
     article{
-        @include coloredThinBorder;
-        padding: 3%;
-        margin-bottom: 2%;
         h4{
             text-align: center;
             padding-bottom: 2%;
@@ -40,5 +40,19 @@
     }
 }
 .loggedInWrapper{
-    @include coloredThinBorder;
+    position: relative;
+    .logOutWrapper{
+        position: absolute;
+        right: 0;
+        top: -3%;
+        .logoutBtn{
+            text-align: end;
+            button{
+                @include orangeBtn;
+                padding: 5%; 
+                font-size: 1.2vw; 
+            }
+        }
+    }
+    
 }
