køb billet funktion næsten færdig

--- a/src/Components/EventsComment/CommentPost.module.scss
+++ b/src/Components/EventsComment/CommentPost.module.scss
@@ -52,7 +52,7 @@ section {
 
             button {
                 position: absolute;
-                @include orangeBtn;
+                background-color: #D39D5B;
                 padding: 1% 2%;
                 border-radius: 8px;
                 margin-left: 1%;
