køb billet med siddeplanser (uden funktion) mangler lidt style

--- a/src/App.scss
+++ b/src/App.scss
@@ -54,7 +54,7 @@ body{
     border: 0.5px solid #D39D5B;  
 }
 @mixin coloredBigBorder {
-    background-color: #D39D5B;
+    background-color: #AD7A51;
     padding: 1rem;
 }
 @mixin sectionPadding {
