--- a/src/Components/BuyTicket/PostReservation.module.scss
+++ b/src/Components/BuyTicket/PostReservation.module.scss
@@ -1,66 +1,122 @@
 @import '../../App.scss';
-form{
 
-    .userFormWrapper{
-        .formElement{
+form {
+
+    .userFormWrapper {
+        margin-right: 1%;
+        margin-top: -15%;
+        width: 45%;
+        padding-bottom: 2%;
+
+        .formElement {
             display: grid;
-            grid-template-columns: 30% 70%;
-            // background-color: thistle;
-            label{
-                margin-left: 1%;
-                min-width: 8rem;
-                max-width: 8rem;
-                // background-color: wheat;
+            grid-template-columns: 35% 65%;
 
-            }
-            .inputWrapper{
+            label {
                 margin-left: 1%;
-                // background-color: tan;
+                min-width: 7rem;
+                max-width: 7rem;
+            }
+
+            .inputWrapper {
+                margin-left: 1%;
                 width: 100%;
                 padding-bottom: 1%;
-                input[type='text'], input[type="number"]{
+
+                input[type='text'],
+                input[type="number"] {
                     width: 100%;
+                    padding: 2%;
                 }
-                
             }
-            #zipcodeWrapper{
+
+            #zipcodeWrapper {
                 display: grid;
                 grid-template-columns: 1fr 1fr;
-                p{
-                    // text-align: left
-                }
-                
             }
         }
-        p{
+
+        p {
             color: red;
             text-align: right;
         }
     }
-    .seatWrapper{
-        .headWrapper{
+
+    .seatWrapper {
+        .headWrapper {
             @include coloredBigBorder;
-            h4{
+            margin-bottom: 5%;
+
+            h4 {
                 color: white;
                 text-align: center;
             }
         }
-        article{
+
+        article {
             display: grid;
             grid-template-columns: repeat(8, 1fr);
             padding-left: 15%;
             padding-right: 15%;
-            .toggleBtn{
-                border: none;
-                background-color: transparent;
-                cursor: pointer;
+
+            .checked {
+                border-radius: 50%;
+                width: 38px;
+                height: 38px;
+                background-color: #AD7A51;
+            }
+
+            div {
+                padding: 3%;
+
+                .seat {
+                    border-radius: 34px;
+                    // background-color: #ccc;
+                    width: 38px;
+                    height: 38px;
+                    border-radius: 50%;
+                    cursor: pointer;
+                    border: 1px solid #AD7A51;
+                    input {
+                        opacity: 0;
+                    }
+                    // input[type="checkbox"] {
+                    //     // appearance: none;
+                    // }
+                }
+                // input:checked {
+                //     background-color: red;
+                // }
+                // .seat::after{
+                //     background-color: red;
+
+                // }
+
+                // .seat:checked {
+                //     background-color: red;
+                // }
+
+                // .seat::before {
+                //     background-color: red;
+                // }
+
+
             }
         }
     }
-    .submitBtn{
-        button{
 
+    .seatText {
+        text-align: center;
+        color: black;
+        padding: 2%;
+    }
+
+    .submitBtn {
+        text-align: end;
+
+        button {
             @include orangeBtn;
+            padding: 2%;
         }
     }
 }
