--- a/src/Components/BuyTicket/ApproveTicket.module.scss
+++ b/src/Components/BuyTicket/ApproveTicket.module.scss
@@ -68,3 +68,26 @@
 
 
 }
+
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+// @media screen and (min-width: $x-large) {
+//     body{
+//     }
+//   }
+@media screen and (max-width: $large) {
+    body{
+    }
+  }
+@media screen and (max-width: $tablet) {
+  body{    
+  }
+}
+@media screen and (max-width: $mobile){
+    body{  
+    }
+}
