--- a/src/Components/BuyTicket/BuyTicket.module.scss
+++ b/src/Components/BuyTicket/BuyTicket.module.scss
@@ -2,24 +2,53 @@
 .buyTicketWrapper{
     @include coloredThinBorder;
     .eventWrapper{
-        // background-color: wheat;
         display: grid;
-        // grid-template-columns: 1fr 2fr;
         grid-template-columns: 50% 50%;
-        // height: 50vh;
         .eventImageWrapper{
             @include coloredBigBorder;
             img{
                 width: 100%;
+                height: 50vh;
             }
         }
         .eventInfoWrapper{
-            // background-color: whitesmoke;
             width: 100%;
             text-align: right;
             figcaption{
                 padding: 3% 5%;
+                h4{
+                    font-size: 1.4vw;
+                }
             }
         }
+    }
+}
+.formWrapper{
+    .notLoginText{
+        text-align: end;
+        padding-right: 2%;
+    }
+}
+
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+// @media screen and (min-width: $x-large) {
+//     body{
+//     }
+//   }
+@media screen and (max-width: $large) {
+    body{
+    }
+  }
+@media screen and (max-width: $tablet) {
+  body{    
+  }
+}
+@media screen and (max-width: $mobile){
+    body{  
     }
 }
