--- a/src/Components/Events/EventDetails.module.scss
+++ b/src/Components/Events/EventDetails.module.scss
@@ -48,7 +48,6 @@
                 padding-bottom: 4%;
                 button{
                     @include orangeBtn;
-                    padding: 2%;
                 }
             }
             .descriptionWrapper{
@@ -82,5 +81,29 @@
                 }
             }
         }
+    }
+}
+
+
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+// @media screen and (min-width: $x-large) {
+//     body{
+//     }
+//   }
+@media screen and (max-width: $large) {
+    body{
+    }
+  }
+@media screen and (max-width: $tablet) {
+  body{    
+  }
+}
+@media screen and (max-width: $mobile){
+    body{  
     }
 }
