--- a/src/Components/Sites/Actors/Actors.module.scss
+++ b/src/Components/Sites/Actors/Actors.module.scss
@@ -42,3 +42,32 @@
         }
     }
 }
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+@media screen and (min-width: $x-large) {
+    body{
+        .actorWrapper{
+            div{        
+                article{
+                    height: 26vh;        
+                }
+            }
+        }
+    }
+  }
+@media screen and (max-width: $large) {
+    body{
+    }
+  }
+@media screen and (max-width: $tablet) {
+  body{    
+  }
+}
+@media screen and (max-width: $mobile){
+    body{  
+    }
+}
