--- a/src/Components/Sites/PerformancesAndEvents/EventList.scss
+++ b/src/Components/Sites/PerformancesAndEvents/EventList.scss
@@ -72,3 +72,37 @@
         }
     }
 }
+
+//BREAKPOINTS
+$x-large: 1300px;
+$large: 1300px;
+$tablet: 980px;
+$mobile: 580px;
+
+@media screen and (min-width: $x-large) {
+    body{
+        .eventListWrapper{
+            .eventsWrapper {
+                figure {
+                    .imageWrapper{
+                        img {
+                            height: 95%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+  }
+@media screen and (max-width: $large) {
+    body{
+    }
+  }
+@media screen and (max-width: $tablet) {
+  body{    
+  }
+}
+@media screen and (max-width: $mobile){
+    body{  
+    }
+}
